r369 (11. 01. 2026):
Buffs: Fixed an issue where some buffs do not have icon properly centered
Damage Absorption Buff: Fixed a rounding issue
Float Text: Float text for Bodybags will load only if stealth is available
Float Text: Fixed an issue where floats for grenades are visible if you do not have grenades equipped and option is enabled

r368 (04. 01. 2026):
Health Float: Fixed a very rare engine crash that sometimes returns number instead of Unit when aimed at

r367 (03. 01. 2026):
Fixed a case where disabled objects in the world are not properly cached (client only)
Missions that respawns loot from previous day (escape or trade) will reuse number of secured of loot (if available) without checking it again
Save data are persistent across game loads; reduces a file reload needed from the drive
Reworked counting of loot in trackers and waypoint
Mission Briefing: Fixed a case of incorrect secured lootbags in Day 1 in Watchdogs Day 2 and Framing Frame Day 2
Mission Briefing: Fixed a case of incorrect secured lootbags if players did not secure any bag after dropin in Day 1 in Watchdogs Day 2 and Framing Frame Day 2
Menu: Buffs are reused when scale is changed and no longer recreated
Reservoir Dogs Day 1: Fixed missing difficulty check for achievement "Waste Not, Want Not"

r366 (22. 12. 2025):
Number of Trackers in Rows/Columns: (Vertical) Fixed an issue with offset if the biggest tracker moved to another column

r365 (14. 12. 2025):
Float Text: Added "Angle" and "Color Icon By Peer" options

r364 (11. 12. 2025):
Buffs: Fixed an issue where Tag Team Paired buff does not reset its custom color after client disconnected
Buffs: Fixed an issue where active Tag Team Paired buff does not hide after client disconnected
Buffs: Possible fix for Stamina buff randomly appearing and staying stuck when disabled
Float Text: Added "Compact Mode" and "Value Format" options
Float Text: Float text for Bodybags is removed after alarm