@@ -741,8 +741,6 @@
     "ehi_buffs_skills_mastermind_combat_medic" : "Combat Medic",
     "ehi_buffs_skills_mastermind_combat_medic_persistent" : "Neschovávat Combat Medic",
     "ehi_buffs_skills_mastermind_controller_subclass" : "Controller",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Hostage Taker / Muscle",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle_persistent" : "Neschovávat Hostage Taker / Muscle",
     "ehi_buffs_skills_mastermind_forced_friendship" : "Forced Friendship (Absorpce)",
     "ehi_buffs_skills_mastermind_forced_friendship_desc" : "Zobrazuje buff s aktuální naakumulovanou absorpcí ze skillu Forced Friendship",
     "ehi_buffs_skills_mastermind_forced_friendship_persistent" : "Neschovávat Forced Friendship (Absorpce)",
@@ -925,8 +923,10 @@
     "ehi_buffs_other_reload_persistent" : "Neschovávat nabití zbraně",
     "ehi_buffs_other_melee_charge" : "Prodleva nabití melee",
     "ehi_buffs_other_melee_charge_persistent" : "Neschovávat prodlevu nabití melee",
+    "ehi_buffs_other_health_regen" : "Prodleva na obnovení zdraví",
+    "ehi_buffs_other_health_regen_persistent" : "Neschovávat prodlevu na obnovu zdraví",
     "ehi_buffs_other_shield_regen" : "Prodleva na obnovení armoru",
-    "ehi_buffs_other_shield_regen_persistent" : "Neschovávat prodlevu na obnovení armoru",
+    "ehi_buffs_other_shield_regen_persistent" : "Neschovávat prodlevu na obnovu armoru",
     "ehi_buffs_other_stamina" : "Stamina",
     "ehi_buffs_other_weapon_swap" : "Výměna zbraní",
     "ehi_buffs_other_weapon_swap_persistent" : "Neschovávat výměnu zbraní",
