@@ -741,8 +741,6 @@
     "ehi_buffs_skills_mastermind_combat_medic" : "Combat Medic",
     "ehi_buffs_skills_mastermind_combat_medic_persistent" : "Persistent Combat Medic",
     "ehi_buffs_skills_mastermind_controller_subclass" : "Controller",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Hostage Taker / Muscle",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle_persistent" : "Persistent Hostage Taker / Muscle",
     "ehi_buffs_skills_mastermind_forced_friendship" : "Forced Friendship (Absorption)",
     "ehi_buffs_skills_mastermind_forced_friendship_desc" : "Shows a gauge with current accumulated absorption from Forced Friendship",
     "ehi_buffs_skills_mastermind_forced_friendship_persistent" : "Persistent Forced Friendship (Absorption)",
@@ -925,6 +923,8 @@
     "ehi_buffs_other_reload_persistent" : "Persistent Reload",
     "ehi_buffs_other_melee_charge" : "Melee Charge Delay",
     "ehi_buffs_other_melee_charge_persistent" : "Persistent Melee Charge Delay",
+    "ehi_buffs_other_health_regen" : "Health Regen Delay",
+    "ehi_buffs_other_health_regen_persistent" : "Persistent Health Regen Delay",
     "ehi_buffs_other_shield_regen" : "Armor Regen Delay",
     "ehi_buffs_other_shield_regen_persistent" : "Persistent Armor Regen Delay",
     "ehi_buffs_other_stamina" : "Stamina",
