@@ -185,7 +185,6 @@
     "ehi_buffs_skills_mastermind_painkillers" : "Anti-douleurs",
     "ehi_buffs_skills_mastermind_combat_medic" : "Infirmier",
     "ehi_buffs_skills_mastermind_controller_subclass" : "Tyran",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Preneur d'otages / Gorille",
     "ehi_buffs_skills_mastermind_sharpshooter_subclass" : "Tireur d'élite",
     "ehi_buffs_skills_mastermind_ammo_efficiency" : "Munitions rentables",
     "ehi_buffs_skills_mastermind_aggressive_reload" : "Rechargement violent",
