@@ -288,7 +288,6 @@
   "ehi_buffs_skills_mastermind_painkillers" : "Painkillers",
   "ehi_buffs_skills_mastermind_combat_medic" : "Combat Medic",
   "ehi_buffs_skills_mastermind_controller_subclass" : "Controller",
-  "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Hostage Taker / Muscle",
   "ehi_buffs_skills_mastermind_forced_friendship" : "Forced Friendship (Absorption)",
   "ehi_buffs_skills_mastermind_forced_friendship_desc" : "Shows a gauge with current accumulated absorption from Forced Friendship",
   "ehi_buffs_skills_mastermind_sharpshooter_subclass" : "Sharpshooter",
