@@ -384,7 +384,6 @@
     "ehi_buffs_skills_mastermind_painkillers" : "Обезболивающее",
     "ehi_buffs_skills_mastermind_combat_medic" : "Боевой медик",
     "ehi_buffs_skills_mastermind_controller_subclass" : "Командик",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Спекулянт / Силовик",
     "ehi_buffs_skills_mastermind_forced_friendship" : "Навязанная дружба (поглощение)",
     "ehi_buffs_skills_mastermind_forced_friendship_desc" : "показывать шкалу с текущим накопленным поглощением от навыка 'навязанная дружба'",
     "ehi_buffs_skills_mastermind_sharpshooter_subclass" : "Снайпер",
