@@ -668,7 +668,6 @@
     "ehi_buffs_skills_mastermind_painkillers" : "镇痛剂",
     "ehi_buffs_skills_mastermind_combat_medic" : "战地医师",
     "ehi_buffs_skills_mastermind_controller_subclass" : "控制系",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "绑架大师 / 肌肉男",
     "ehi_buffs_skills_mastermind_forced_friendship" : "强制友谊 (伤害吸收)",
     "ehi_buffs_skills_mastermind_forced_friendship_desc" : "显示”强制友谊“提供的伤害吸收量",
     "ehi_buffs_skills_mastermind_sharpshooter_subclass" : "神枪系",
