@@ -543,7 +543,6 @@
     "ehi_buffs_skills_mastermind_painkillers" : "Painkillers",
     "ehi_buffs_skills_mastermind_combat_medic" : "Combat Medic",
     "ehi_buffs_skills_mastermind_controller_subclass" : "Controller",
-    "ehi_buffs_skills_mastermind_hostage_taker_muscle" : "Hostage Taker / Muscle",
     "ehi_buffs_skills_mastermind_forced_friendship" : "Forced Friendship (Absorption)",
     "ehi_buffs_skills_mastermind_forced_friendship_desc" : "แสดงค่าการดูดซึมสะสมจากทักษะ Forced Friendship",
     "ehi_buffs_skills_mastermind_sharpshooter_subclass" : "Sharpshooter",
